# swaptop

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs  swap_info.rs  theme.rs
