[package]
name = "swaptop"
version = "0.1.0"
edition = "2024"
authors = ["Luis Otavio <luotasss@gmail.com>"]

[features]
default = ["linux_support"]
linux_support = ["procfs"]
windows_support = ["tasklist", "sysinfo"]

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
thiserror = "2.0.12"
crossterm = "0.29.0"
color-eyre = "0.6.3"

procfs = { version = "0.17.0", optional = true }
tasklist = { version = "0.3.0", optional = true }
sysinfo = { version = "0.35.1", optional = true }
