[package]
name = "swaptop"
version = "1.0.1"
edition = "2024"
authors = ["Luis Otavio <luotasss@gmail.com>"]

description = "A terminal user interface tool to monitor swap usage on Linux and Windows."
readme = "README.md"
repository = "https://github.com/luis-ota/swaptop"  
license = "MIT"

keywords = ["swap", "monitor", "cli", "tui", "swaptop"]
categories = ["command-line-utilities", "visualization"]
homepage = "https://github.com/luis-ota/swaptop"
documentation = "https://github.com/luis-ota/swaptop"

[features]
default = ["linux"]
linux = ["procfs"]
windows_support = ["tasklist", "sysinfo", "winapi"]

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
thiserror = "2.0.12"
crossterm = "0.29.0"
color-eyre = "0.6.3"

procfs = { version = "0.17.0", optional = true }
tasklist = { version = "0.3.0", optional = true }
sysinfo = { version = "0.35.1", optional = true }
winapi = { version = "0.3.9", features = ["memoryapi", "sysinfoapi", "winerror"], optional = true }
